logs/engage-django-sdk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/engage_django_sdk'...
Compiling './lib/python3.5/site-packages/engage_django_sdk/__main__.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/__main__.py", line 70
    except SystemExit, c:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/engage_django_sdk/packager'...
Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/__main__.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/__main__.py", line 34
    except SystemExit, c:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/command.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/command.py", line 57
    print "Usage:\n %s\n\n%s\n\n" % (usage, command.SHORT_DESC)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/django_config.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/django_config.py", line 124
    except ValueError, m:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/engage_django_components.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/engage_django_components.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/parse_requirements.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/parse_requirements.py", line 30
    print 'Warning: --index-url not supported yet.'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/runtests.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/runtests.py", line 144
    except SystemExit, c:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/utils.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/utils.py", line 187
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/engage_django_sdk/packager/validation_results.py'...
***   File "./lib/python3.5/site-packages/engage_django_sdk/packager/validation_results.py", line 157
    except Exception, v:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/engage_django_sdk-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './share'...
Listing './share/python-wheels'...
